--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,14 @@
     <dimen name="line_height_button_primary">20sp</dimen>
     <dimen name="margin_default">16dp</dimen>
 
+    <!-- spacing -->
+    <dimen name="spacing_8">8dp</dimen>
+    <dimen name="spacing_16">16dp</dimen>
+    <dimen name="spacing_32">32dp</dimen>
+
+    <!-- text sizes -->
+    <dimen name="headline_6_text_size">20sp</dimen>
+    <dimen name="subtitle_1_text_size">16sp</dimen>
+
+
 </resources>
