--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,10 @@
 <resources>
+    <style name="TextAppearance.Moneybox.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">@dimen/headline_6_text_size</item>
+    </style>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+    <style name="TextAppearance.Moneybox.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="android:textSize">@dimen/subtitle_1_text_size</item>
     </style>
 
     <style name="Widget.Button.Colored.Rounded" parent="Widget.AppCompat.Button.Borderless.Colored">
@@ -17,7 +14,6 @@
         <item name="android:textSize">@dimen/text_style_medium</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textAllCaps">true</item>
         <item name="lineHeight">@dimen/line_height_button_primary</item>
         <item name="android:letterSpacing">0.02</item>
         <item name="android:gravity">center</item>
