--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -35,8 +35,7 @@
             android:hint="@string/prompt_email"
             android:inputType="textEmailAddress"
             android:maxLines="1"
-            android:singleLine="true"
-            android:text="jaeren+androidtest@moneyboxapp.com"/>
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -57,8 +56,7 @@
             android:imeActionLabel="@string/action_sign_in_short"
             android:inputType="textPassword"
             android:maxLines="1"
-            android:singleLine="true"
-            android:text="P455word12"/>
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
